# Rust_Motion_Detector

./: Cargo.toml  LICENSE  README.md  partitions.csv
.cargo/: config_example.toml
src/: config.rs  http.rs  led.rs  main.rs  wifi.rs
